--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,19 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>551ec3c0-47e8-43f8-9740-8620971b7e2f</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>EduConnect</title>
 
-    <meta property="og:title" content="551ec3c0-47e8-43f8-9740-8620971b7e2f" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="EduConnect" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
     <link rel="icon" type="image/png" href="/src/assets/logo.png" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
